--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #f2f2f2;
+
     /*заменить на белый (пока чтоб было видно) */
     font-size: 14px;
     color: #000;
@@ -59,15 +60,15 @@ h2 {
     text-decoration: none;
 }
 
-header.container {
+header {
     width: 1200px;
-    min-height: 56px;
-    max-height: 134px;
+    /*min-height: 56px;
+    max-height: 134px;*/
     background: #fff;
     margin: -10px auto;
 }
 
-main.container {
+main {
     width: 1200px;
     background: #abc635;
     margin: -20px auto;
@@ -75,7 +76,7 @@ main.container {
 
 .menu-navigatior {
     width: 1200px;
-    min-height: 56px;
+    /*min-height: 56px;*/
     background: #C17AA1;
     margin: 0px auto;
 }
@@ -106,7 +107,7 @@ ul {
 /*НАЧАЛО Секция с СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК*/
 .about {
     width: 1200px;
-    height: 215px;
+    /*height: 215px;*/
     background: #fff;
     margin-top: -26px;
 }
@@ -115,7 +116,7 @@ ul {
 /*НАЧАЛО Секция с НАСТОЯЩИЙ ГОРОДОК*/
 .city-description {
     width: 400px;
-    height: 256px;
+    /*height: 256px;*/
     background: #81b3d2;
     margin-top: 0px;
     float: left;
@@ -123,7 +124,7 @@ ul {
 
 .city-sedona {
     width: 800px;
-    height: 256px;
+    /*height: 256px;*/
     background: url(img/pic-real-city.jpg);
     margin-left: -40px;
     margin-top: -14px;
@@ -134,7 +135,7 @@ ul {
 /*НАЧАЛО Секция с ЖИЛЬЕ ЕДА СУВЕНИРЫ*/
 .pluses-block {
     width: 400px;
-    height: 330px;
+    /*height: 330px;*/
     float: left;
     background: #fff;
 }
@@ -143,7 +144,7 @@ ul {
 /*НАЧАЛО Секция с НЕБОЛЬШАЯ ПЛОЩАДЬ*/
 .roсks-pic {
     width: 800px;
-    height: 256px;
+    /*height: 256px;*/
     background: url(img/pic-devil-bridge.jpg);
     margin-left: -40px;
     margin-top: -14px;
@@ -152,7 +153,7 @@ ul {
 
 .roсks-description {
     width: 400px;
-    height: 256px;
+    /*height: 256px;*/
     background: #81b3d2;
     margin-top: 0px;
     float: right;
@@ -162,7 +163,7 @@ ul {
 /*НАЧАЛО Секция с КРАСИВАЯ ДОРОГА МАЛО ТУРИСТОВ*/
 .pluses-block-1 {
     width: 400px;
-    height: 256px;
+    /*height: 256px;*/
     float: left;
     background: #eeeeee;
 }
@@ -170,7 +171,7 @@ ul {
 
 
 /*НАЧАЛО ОТЕЛИ*/
-main.container-hotels {
+main.hotels {
     width: 1200px;
     background: #f2f2f2;
     margin: 0px auto;
@@ -188,20 +189,20 @@ main.container-hotels {
 
 .filter-infrastructure {
     width: 300px;
-    height: 154px;
+    /*height: 154px;*/
     float: left;
 }
 
 .filter-houses {
     width: 300px;
-    height: 154px;
+    /*height: 154px;*/
     float: left;
 }
 
 
 .filter-price {
     width: 318px;
-    height: 154px;
+    /*height: 154px;*/
     float: right;
     margin-right: -72px;
 }
@@ -215,7 +216,7 @@ main.container-hotels {
     /*display: inline-block;*/
     background: #fff;
     width: 1200px;
-    height: 88px;
+    /*height: 88px;*/
 }
 
 .search-found {
@@ -243,7 +244,6 @@ main.container-hotels {
 /*НАЧАЛО секция с отелями*/
 .found {        /*--общий для всех блоков*/
     width: 1200px;
-
     margin: 0px;
     padding: 0px;
     background: #fff;
@@ -261,20 +261,20 @@ main.container-hotels {
 
 .found-houses-all { /*--общий для отеля, гостиницей. ценой*/
     width: 369px;
-    height: 148px;
+    /*height: 148px;*/
     margin: 0px;
     float: left;
 }
 
 .found-houses-info { /*--блок с названием отеля*/
     width: 269px;
-    height: 50px;
+    /*height: 50px;*/
     float: left;
 }
 
 .found-about { /*--блок с гостиницей и 4000р*/
     width: 269px;
-    height: 46px;
+    /*height: 46px;*/
     float: left;
 }
 
@@ -309,7 +309,7 @@ main.container-hotels {
 }
 
 .rating-stars {
-    height: 75px;
+    /*height: 75px;*/
     float: right;
     margin-right: 73px;
 
@@ -317,28 +317,32 @@ main.container-hotels {
 
 .rating-number {
     width: 112px;
-    height: 28px;
+    /*height: 28px;*/
     background: #f2f2f2;
     float: right;
-    margin-right: -90px;
-    margin-top: 50px;
+    margin: 50px -90px;
     /*vertical-align: center;*/
 }
 
 /*КОНЕЦ секция с отелями*/
 
-
-
-
-
-
-
-/*footer.container {
+.booking {
     width: 1200px;
-    background: #359845;
-    margin: -21px auto;
+    /*height: 295px;*/
+    background: #fff;
+}
 
-}*/
+iframe {
+    width: 100%;
+    height: 470px;
+    border: 0px;
+}
+
+footer {
+    width: 1200px;
+    background: #fff;
+    margin: 0px auto;
+}
 
 
 
