--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 body {
-    background-color: #f2f2f2;
-
-    /*заменить на белый (пока чтоб было видно) */
+    min-width: 1200px;
     font-size: 14px;
     color: #000;
     line-height: 21px;
     font-weight: bold;
-    font-family: "PT Sans", "Sample", "sans-serif";
+    font-family: "PT Sans", "Sample", sans-serif;
     text-transform: uppercase;
+    background-color: #f2f2f2;
+    margin: 0;
     display:block;
 }
 
@@ -64,12 +64,12 @@ h2 {
 
 /*НАЧАЛО ХЕДЕР*/
 header {
+    min-height: 56px;
     width: 1200px;
     margin: 0 auto;
 }
 
 .menu-navigator {
-    float: left;
     width: 1200px;
     margin: 0px auto;
     background: #fff;
@@ -131,10 +131,20 @@ main {
     margin: 0 auto;
 }
 
+img.card-welcome {
+    position: absolute;
+    margin: 70px 380px;
+}
+
+img.card-sedona {
+    vertical-align: middle;
+}
+
 .card-welcome-sedona {
     margin: 0 auto;
+    padding: 0px;
     background: url(img/background-1.jpg);
-}
+ }
 
 .card-welcome {
     position: absolute;
@@ -149,6 +159,7 @@ main {
     margin: 0 auto;
     padding-top: 65px;
     padding-bottom: 56px;
+
 }
 
 .align {
@@ -161,7 +172,7 @@ main {
 /*НАЧАЛО Секция с НАСТОЯЩИЙ ГОРОДОК*/
 .city {
     width: 1200px;
-    height: 257px;  /*разобраться с высотой px или %*/
+  /*  height: 257px;*/  /*разобраться с высотой px или %*/
     margin: 0;
     padding: 0;
     /*background: #eeeeee;*/
@@ -169,9 +180,10 @@ main {
 
 .city-description {
     width: 400px;
-    height: 100%;
+    /*height: 100%;*/
     background: #81b3d2;
     margin: 0 auto;
+    padding-bottom: 50px;
     float: left;
 }
 
@@ -181,15 +193,18 @@ main {
 
 .city-sedona {
     width: 800px;
+    height: 255px;
     background: url(img/pic-real-city.jpg);
+    background-position: center;
     float: left;
+    /*vertical-align: middle;*/
 }
 /*КОНЕЦ Секция с НАСТОЯЩИЙ ГОРОДОК*/
 
 /*НАЧАЛО Секция с ЖИЛЬЕ ЕДА СУВЕНИРЫ*/
 .pluses-1 {
     width: 1200px;
-    height: 335px;
+    /*height: 335px;*/
     margin: 0;
     padding: 0;
     /*background: #eeeeee;*/
@@ -197,7 +212,7 @@ main {
 
 .pluses-block {
     width: 400px;
-    height: 100%;   /*разобраться с высотой px или %*/
+    /*height: 100%;   разобраться с высотой px или %*/
     float: left;
     background: #fff;
 }
@@ -205,7 +220,7 @@ main {
 
 .roсks {
     width: 1200px;
-    height: 257px;
+    /*height: 257px;*/
     margin: 0;
     padding: 0;
     background: #eeeeee;
@@ -224,7 +239,7 @@ main {
 
 .roсks-description {
     width: 400px;
-    height: 100%;   /*разобраться с высотой px или %*/
+    /*height: 100%;   разобраться с высотой px или %*/
     background: #81b3d2;
     float: right;
 }
@@ -234,9 +249,8 @@ main {
 
 .pluses-2 {
     width: 1200px;
-    height: 255px;
+    /*height: 255px;*/
     margin: 0;
-    padding: 0;
     background: #eeeeee;
     text-align: center;
 }
@@ -244,6 +258,28 @@ main {
 .pluses-block-1 {
     width: 400px;
     float: left;
+    padding-top: 50px;
+    padding-bottom: 65px;
+    /*padding-right: 95px;*/
+    padding-left: 95px;
+}
+
+.pluses-block-2 {
+    width: 400px;
+    float: left;
+    padding-top: 50px;
+    padding-bottom: 65px;
+    /*padding-right: 95px;*/
+    padding-left: 95px;
+}
+
+.pluses-block-3 {
+    width: 400px;
+    float: right;
+    padding-top: 50px;
+    padding-bottom: 65px;
+    /*padding-right: 95px;*/
+    padding-left: 95px;
 }
 
 
@@ -403,7 +439,7 @@ main.hotels {
 
 .rating-number {
     width: 110px;
-    height: 25px;
+    /*height: 25px;*/
     background: #f2f2f2;
     float: right;
     margin-right: 73px;
@@ -441,7 +477,7 @@ main.hotels {
 
 .search-form-link {
     width: 565px;
-    height: 85px;
+    /*height: 85px;*/
     background: #766357;
     /*padding-top: 24px;*/
     margin: 0 auto;
@@ -450,7 +486,7 @@ main.hotels {
 
 .search-form-book {
     width: 565px;
-    height: 480px;
+    /*height: 480px;*/
     margin: 0 auto;
     background: #fff;
 }
@@ -467,7 +503,7 @@ iframe {
     position: absolute;
     margin: 0px auto;
     width: 1200px;
-    height: 470px;
+    /*height: 470px;*/
     border: 0px;
 }
 /*КОНЕЦ секция с КАРТОЙ*/
@@ -475,7 +511,7 @@ iframe {
 /*НАЧАЛО секция с ФУТЕРОМ*/
 footer {
     width: 1200px;
-    max-height: 120px;
+    /*max-height: 120px;*/
     background: #fff;
     margin: 0px auto;
     padding-top: 40px;
