--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,6 @@ img.card-sedona {
 /*НАЧАЛО Секция с НАСТОЯЩИЙ ГОРОДОК*/
 .city {
     width: 1200px;
-  /*  height: 257px;*/  /*разобраться с высотой px или %*/
     margin: 0;
     padding: 0;
     /*background: #eeeeee;*/
@@ -180,24 +179,21 @@ img.card-sedona {
 
 .city-description {
     width: 400px;
-    /*height: 100%;*/
+    min-height: 155px;
     background: #81b3d2;
     margin: 0 auto;
-    padding-bottom: 50px;
+    padding: 53px 57px;
+    box-sizing: border-box;
     float: left;
-}
-
-.city-view {
-    margin: 0 auto;
+    text-align: center;
 }
 
 .city-sedona {
-    width: 800px;
+    position: relative;
+    width: 66%;
     height: 255px;
-    background: url(img/pic-real-city.jpg);
-    background-position: center;
-    float: left;
-    /*vertical-align: middle;*/
+    background: url(../img/pic-real-city-full.jpg);
+    float: right;
 }
 /*КОНЕЦ Секция с НАСТОЯЩИЙ ГОРОДОК*/
 
